removed hr when on smalles viewport

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -348,6 +348,10 @@ footer {
         margin: 0 auto;
     }
 
+    hr {
+        display: none;
+    }
+
     .left-about-heading, .right-about-heading {
         width: inherit;
     }
